# Signature

./: CMakeLists.txt  README.md
src/: ArgParser.cpp  ArgParser.h  Reader.cpp  Reader.h  TaskQueue.cpp  TaskQueue.h  Writer.cpp  Writer.h  main.cpp
